--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>chatterbox</title>
-    <link rel="stylesheet" href="scripts/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -19,21 +19,28 @@
       }
     </script>
     <!-- your scripts -->
-    <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/init.js"></script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <select name="roomSelect" class="roomSelect" id="roomSelect">
-      </select>
       <!-- Your HTML goes here! -->
-      <br>
-      <textarea placeholder="Chatterbox your comment" class="textbox" id="textbox" id="text" name="text" rows="4" style="overflow: hidden; word-wrap: break-word; resize: none; height: 80px; "></textarea>  
-		  <br>
-		  <input class='addComment' id="button" type="submit" value="Create">
-    </div>
+
+      <div class="spinner"><img src="images/spiffygif_46x46.gif"></div>
+      <div id="rooms">
+        Room:
+        <select id="roomSelect">
+        </select>
+      </div>
+      <form action="#" id="send" method="post">
+        <input type="text" name="message" id="message"/>
+        <input type="submit" name="submit" class="submit"/>
+      </form>    </div>
     <div id="chats"></div>
-  </body>
+
+    <script>
+      $(function(){
+        app.init()
+      });
+    </script>  </body>
 </html>
